# Cpp-mediaplayer

./: .gitignore  .gitmodules  AudioFile.hpp  CMakeLists.txt  File.hpp  FolderList.hpp  MediaManagement.hpp  PlayList.hpp  VideoFile.hpp  build.sh  configure.sh  draft.txt  main  main.cpp  mediaConfig.h.in  readme.md
debug/: media  mediaConfig.h
doc/: requirements.txt
media_lib/: AudioFile.cpp  AudioFile.hpp  CMakeLists.txt  File.cpp  File.hpp  FolderList.cpp  FolderList.hpp  MediaManagement.cpp  MediaManagement.hpp  PlayList.cpp  PlayList.hpp  VideoFile.cpp  VideoFile.hpp
src/: CMakeLists.txt
src/controller/: CMakeLists.txt  MediaManagement.cpp  MediaManagement.hpp  musicPlayer.cpp  musicPlayer.hpp
src/controller/MultiThreading/: ActiveObject.cpp  ActiveObject.hpp  CMakeLists.txt  DispatchQueue.cpp  DispatchQueue.hpp
src/module/: AudioFile.cpp  AudioFile.hpp  CMakeLists.txt  File.cpp  File.hpp  FolderList.cpp  FolderList.hpp  PlayList.cpp  PlayList.hpp  VideoFile.cpp  VideoFile.hpp
testing/: codec  codec.cpp  file_size  file_size.cpp  get_dir  get_dir.cpp  list_file  list_file.cpp  main.cpp
testing/SDL2/: CMakeLists.txt  musicPlayer.cpp
testing/actor_pattern_multithreading/: CMakeLists.txt  main.cpp
testing/intergrating_with_musicPlayer_class/: main.cpp
testing/pause_resume/: CMakeLists.txt  main.cpp
testing/play_function/: main.cpp
testing/play_music_multithreading/: main.cpp
